--- a/HTML/pokemon.html
+++ b/HTML/pokemon.html
@@ -36,10 +36,16 @@
 					<button id="darkLightMode">
 						<i class="fa-solid fa-moon"></i>
 					</button>
-					<a id="search" href="../HTML/search-pokemon.html">Rechercher</a>
-					<a class="cta primaryButton" href="../HTML/team-pokemon.html">
+					<form id="searchPokemon">
+						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
+						<div>
+							<input type="submit" id="searchSubmit" placeholder="Rechercher" />
+							<i class="fa-solid fa-magnifying-glass"></i>
+						</div>
+					</form>
+					<a class="cta primaryButton" href="./team-pokemon.html">
 						Équipe
-						<i class="fa-solid fa-chevron-right"></i>
+						<i id="styleIcon" class="fa-solid fa-certificate"></i>
 					</a>
 				</div>
 			</div>
@@ -60,14 +66,16 @@
 								<button id="evolution" class="subText">Évolution</button>
 							</div>
 							<!-- Add pokemon team -->
-							<button class="cta primaryButton">
-								Ajouter
-								<i class="fa-solid fa-plus"></i>
-							</button>
-							<button id="watchPokemon" class="cta primaryButton">
-								Voir
-								<i class="fa-solid fa-plus"></i>
-							</button>
+							<div>
+								<button class="cta secondaryButton">
+									Ajouter
+									<i class="fa-solid fa-plus"></i>
+								</button>
+								<button id="watchPokemon" class="cta primaryButton">
+									Voir
+									<i class="fa-solid fa-chevron-right"></i>
+								</button>
+							</div>
 						</nav>
 						<div class="sectionInformations">
 							<div class="sectionType">
@@ -102,30 +110,6 @@
 					<figure id="figurePokemonZf">
 						<img src="#" id="imgPokemon" alt="Pokemon de présentation" />
 					</figure>
-				</div>
-			</section>
-
-			<!-- Pokemon on the bill -->
-			<section id="pokemonPromoted">
-				<div class="container">
-					<header>
-						<h1>Pokédex Pokemon</h1>
-						<p>Retrouvez tout vos Pokémons préférés !</p>
-
-						<div>
-							<span class="redText subText">Pokémon à l’affiche</span>
-							<div class="spaceGap">
-								<!-- Select pokemons -->
-								<a href="./HTML/pokedex-pokemon-list.html" id="referech" class="cta primaryButton">
-									Voir la liste complète
-									<i class="fa-solid fa-chevron-right"></i>
-								</a>
-							</div>
-						</div>
-					</header>
-
-					<!-- Grid pokedex -->
-					<div class="grid" id="gridPokemon"></div>
 				</div>
 			</section>
 		</main>
