--- a/HTML/rgpd.html
+++ b/HTML/rgpd.html
@@ -37,19 +37,20 @@
 						<i class="fa-solid fa-moon"></i>
 					</button>
 					<form id="searchPokemon">
-						<input id="search" type="search" id="searchInput" required />
+						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
 						<div>
 							<input type="submit" id="searchSubmit" placeholder="Rechercher" />
-							<i class="fa-solid fa-chevron-right"></i>
+							<i class="fa-solid fa-magnifying-glass"></i>
 						</div>
 					</form>
 					<a class="cta primaryButton" href="./team-pokemon.html">
 						Équipe
-						<i class="fa-solid fa-chevron-right"></i>
+						<i id="styleIcon" class="fa-solid fa-certificate"></i>
 					</a>
 				</div>
 			</div>
 		</header>
+
 		<!-- Main -->
 		<main></main>
 
