--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -150,12 +150,12 @@
 					<ul>
 						<li class="secondaryText">Navigation</li>
 						<li><a href="../index.html">Accueil</a></li>
-						<li><a href="../HTML/pokedex-pokemon-list.html">Pokédex</a></li>
+						<li><a href="./pokedex-pokemon-list.html">Pokédex</a></li>
 					</ul>
 					<ul>
 						<li class="secondaryText">Ressources</li>
-						<li><a href="../HTML/team-pokemon.html">Équipe</a></li>
-						<li><a href="../HTML/rgpd.html">Mentions légales</a></li>
+						<li><a href="./team-pokemon.html">Équipe</a></li>
+						<li><a href="./rgpd.html">Mentions légales</a></li>
 					</ul>
 				</div>
 				<div class="secondaryContent">
