--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 							<i class="fa-solid fa-magnifying-glass"></i>
 						</div>
 					</form>
-					<a class="cta primaryButton" href="./HTML/team-pokemon.html">
+					<button class="cta primaryButton" id="teamButton">
 						Équipe
 						<i id="styleIcon" class="fa-solid fa-certificate"></i>
-					</a>
+					</button>
 				</div>
 			</div>
 		</header>
@@ -125,7 +125,7 @@
 							<span class="redText subText">Pokémon à l’affiche</span>
 							<div class="spaceGap">
 								<!-- Select pokemons -->
-								<a href="./HTML/pokedex-pokemon-list.html" id="referech" class="cta primaryButton">
+								<a href="./HTML_PAGES/pokedex-pokemon-list.html" id="referech" class="cta primaryButton">
 									Voir la liste complète
 									<i class="fa-solid fa-chevron-right"></i>
 								</a>
@@ -152,13 +152,13 @@
 					</div>
 					<ul>
 						<li class="secondaryText">Navigation</li>
-						<li><a href="./HTML/pokemon.html">Accueil</a></li>
-						<li><a href="./HTML/pokedex-pokemon-list.html">Pokédex</a></li>
+						<li><a href="./HTML_PAGES/pokemon.html">Accueil</a></li>
+						<li><a href="./HTML_PAGES/pokedex-pokemon-list.html">Pokédex</a></li>
 					</ul>
 					<ul>
 						<li class="secondaryText">Ressources</li>
-						<li><a href="./HTML/team-pokemon.html">Équipe</a></li>
-						<li><a href="./HTML/rgpd.html">Mentions légales</a></li>
+						<li><a href="./HTML_PAGES/team-pokemon.html">Équipe</a></li>
+						<li><a href="./HTML_PAGES/rgpd.html">Mentions légales</a></li>
 					</ul>
 				</div>
 				<div class="secondaryContent">
