--- a/HTML_PAGES/rgpd.html
+++ b/HTML_PAGES/rgpd.html
@@ -43,76 +43,16 @@
 							<i class="fa-solid fa-magnifying-glass"></i>
 						</div>
 					</form>
-					<a class="cta primaryButton" href="./team-pokemon.html">
+					<button class="cta primaryButton" id="teamButton">
 						Équipe
 						<i id="styleIcon" class="fa-solid fa-certificate"></i>
-					</a>
+					</button>
 				</div>
 			</div>
 		</header>
-		<!-- Main -->
-		<main>
-			<section class="bgColor">
-				<div id="zf" class="container">
-					<!-- Section informations pokemon Zf -->
-					<div class="PokemonInfos">
-						<!-- Name pokemon -->
-						<h2 class="PokemonName"></h2>
-						<span class="IdPokemon"></span>
 
-						<nav class="sectionCardNav">
-							<div>
-								<button id="about" class="subText redText">À propos</button>
-								<button id="evolution" class="subText">Évolution</button>
-							</div>
-							<!-- Add pokemon team -->
-							<div>
-								<button class="cta secondaryButton">
-									Ajouter
-									<i class="fa-solid fa-plus"></i>
-								</button>
-								<button id="watchPokemon" class="cta primaryButton">
-									Voir
-									<i class="fa-solid fa-chevron-right"></i>
-								</button>
-							</div>
-						</nav>
-						<div class="sectionInformations">
-							<div class="sectionType">
-								<span class="secondaryText subText">Type</span>
-								<!-- Type pokemon -->
-								<div id="typesPokemons"></div>
-							</div>
-							<!-- Skills pokemon -->
-							<div class="sectionTalent">
-								<span class="secondaryText subText">Talent</span>
-								<span class="talentPokemon subText"></span>
-							</div>
-							<!-- Generation pokemon -->
-							<div class="sectionGen">
-								<span class="secondaryText subText">Région</span>
-								<span class="location subText"></span>
-							</div>
-						</div>
-						<!-- Description pokemon -->
-						<div class="sectionDescription">
-							<span class="secondaryText subText">Description</span>
-							<span class="description"></span>
-						</div>
-						<!-- Stats pokemon -->
-						<div class="sectionsStatistiques">
-							<div class="statistiques zones">
-								<span class="secondaryText subText">Statistiques</span>
-							</div>
-						</div>
-					</div>
-					<!-- Img pokemon -->
-					<figure id="figurePokemonZf">
-						<img src="#" id="imgPokemon" alt="Pokemon de présentation" />
-					</figure>
-				</div>
-			</section>
-		</main>
+		<!-- Main -->
+		<main></main>
 
 		<!-- Footer -->
 		<footer class="container">
@@ -128,13 +68,12 @@
 					<ul>
 						<li class="secondaryText">Navigation</li>
 						<li><a href="../index.html">Accueil</a></li>
-						<li><a href="../HTML/team-pokemon.html">Équipe</a></li>
-						<li><a href="../HTML/pokedex-pokemon-list.html">Pokédex</a></li>
+						<li><a href="./pokedex-pokemon-list.html">Pokédex</a></li>
 					</ul>
 					<ul>
 						<li class="secondaryText">Ressources</li>
-						<li><a href="../HTML/search-pokemon.html">Recherche</a></li>
-						<li><a href="../HTML/rgpd.html">Mentions légales</a></li>
+						<li><a href="./team-pokemon.html">Équipe</a></li>
+						<li><a href="./rgpd.html">Mentions légales</a></li>
 					</ul>
 				</div>
 				<div class="secondaryContent">
@@ -148,7 +87,7 @@
 		</footer>
 
 		<!-- Script JS -->
-		<script type="module" src="../JS/pokemon-script.js"></script>
+		<script type="module" src="../JS/index-script.js"></script>
 		<script type="module" src="../JS/functions.js"></script>
 		<script>
 			window.addEventListener('load', () => {
