--- a/HTML_PAGES/pokemon.html
+++ b/HTML_PAGES/pokemon.html
@@ -67,7 +67,7 @@
 							</div>
 							<!-- Add pokemon team -->
 							<div>
-								<button class="cta secondaryButton">
+								<button class="cta secondaryButton" id="teamButton">
 									Ajouter
 									<i class="fa-solid fa-plus"></i>
 								</button>
