Save (avant dernier avant final)

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 					<!-- Img pokemon -->
 					<figure id="figurePokemonZf">
 						<img src="#" id="imgPokemon" alt="Pokemon de présentation" />
+						<div id="bgPokeball"></div>
 					</figure>
 				</div>
 			</section>
