--- a/HTML_PAGES/pokemon.html
+++ b/HTML_PAGES/pokemon.html
@@ -62,8 +62,8 @@
 
 						<nav class="sectionCardNav">
 							<div>
-								<button id="about" class="subText redText">À propos</button>
-								<button id="evolution" class="subText">Évolution</button>
+								<button id="aboutBtn" class="subText redText">À propos</button>
+								<button id="evolutionBtn" class="subText">Évolution</button>
 							</div>
 							<!-- Add pokemon team -->
 							<div>
@@ -73,38 +73,46 @@
 								</button>
 							</div>
 						</nav>
-						<div class="sectionInformations">
-							<div class="sectionType">
-								<span class="secondaryText subText">Type</span>
-								<!-- Type pokemon -->
-								<div id="typesPokemons"></div>
+						<div id="about">
+							<div class="sectionInformations">
+								<div class="sectionType">
+									<span class="secondaryText subText">Type</span>
+									<!-- Type pokemon -->
+									<div id="typesPokemons"></div>
+								</div>
+								<!-- Skills pokemon -->
+								<div class="sectionTalent">
+									<span class="secondaryText subText">Talent</span>
+									<span class="talentPokemon subText"></span>
+								</div>
+								<!-- Generation pokemon -->
+								<div class="sectionGen">
+									<span class="secondaryText subText">Région</span>
+									<span class="location subText"></span>
+								</div>
 							</div>
-							<!-- Skills pokemon -->
-							<div class="sectionTalent">
-								<span class="secondaryText subText">Talent</span>
-								<span class="talentPokemon subText"></span>
+							<!-- Description pokemon -->
+							<div class="sectionDescription">
+								<span class="secondaryText subText">Description</span>
+								<span class="description"></span>
 							</div>
-							<!-- Generation pokemon -->
-							<div class="sectionGen">
-								<span class="secondaryText subText">Région</span>
-								<span class="location subText"></span>
+							<!-- Stats pokemon -->
+							<div class="sectionsStatistiques">
+								<div class="statistiques zones">
+									<span class="secondaryText subText">Statistiques</span>
+								</div>
 							</div>
 						</div>
-						<!-- Description pokemon -->
-						<div class="sectionDescription">
-							<span class="secondaryText subText">Description</span>
-							<span class="description"></span>
-						</div>
-						<!-- Stats pokemon -->
-						<div class="sectionsStatistiques">
-							<div class="statistiques zones">
-								<span class="secondaryText subText">Statistiques</span>
+						<div id="evolution" class="hidden">
+							<div class="grid" id="gridPokemon">
+								<span class="secondaryText subText">Évolution</span>
 							</div>
 						</div>
 					</div>
 					<!-- Img pokemon -->
 					<figure id="figurePokemonZf">
 						<img src="#" id="imgPokemon" alt="Pokemon de présentation" />
+						<div id="bgPokeball"></div>
 					</figure>
 				</div>
 			</section>
