--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -131,6 +131,7 @@
 					<!-- Img pokemon -->
 					<figure id="figurePokemonZf">
 						<img src="#" id="imgPokemon" alt="Pokemon de présentation" />
+						<div id="bgPokeball"></div>
 					</figure>
 				</div>
 			</section>
