--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -52,15 +52,15 @@
 			<section class="bgColor">
 				<div id="zf" class="container">
 					<!-- Section informations pokemon Zf -->
-					<div class="PokemonInfos">
+					<div class="PokemonZf">
 						<!-- Name pokemon -->
-						<h2 class="PokemonName"></h2>
-						<span class="IdPokemon"></span>
+						<h2 id="PokemonName"></h2>
+						<span id="IdPokemon"></span>
 
-						<nav class="sectionCardNav">
+						<div class="sectionCardNav">
 							<div>
-								<button id="about" class="subText redText">À propos</button>
-								<button id="evolution" class="subText">Évolution</button>
+								<button id="aboutBtn" class="subText redText">À propos</button>
+								<button id="evolutionBtn" class="subText">Évolution</button>
 							</div>
 							<!-- Add pokemon team -->
 							<div>
@@ -73,7 +73,7 @@
 									<i class="fa-solid fa-chevron-right"></i>
 								</button>
 							</div>
-						</nav>
+						</div>
 						<div class="sectionInformations">
 							<div class="sectionType">
 								<span class="secondaryText subText">Type</span>
@@ -81,14 +81,16 @@
 								<div id="typesPokemons"></div>
 							</div>
 							<!-- Skills pokemon -->
-							<div class="sectionTalent">
-								<span class="secondaryText subText">Talent</span>
-								<span class="talentPokemon subText"></span>
-							</div>
-							<!-- Generation pokemon -->
-							<div class="sectionGen">
-								<span class="secondaryText subText">Région</span>
-								<span class="location subText"></span>
+							<div class="sectionInfos">
+								<div class="sectionTalent">
+									<span class="secondaryText subText">Talent</span>
+									<span class="talentPokemon subText"></span>
+								</div>
+								<!-- Generation pokemon -->
+								<div class="sectionGen">
+									<span class="secondaryText subText">Région</span>
+									<span class="location subText"></span>
+								</div>
 							</div>
 						</div>
 						<!-- Description pokemon -->
