--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 						<i class="fa-solid fa-moon"></i>
 					</button>
 					<form id="searchPokemon">
-						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
+						<input id="search" type="search" required placeholder="Recherche" />
 						<div>
-							<input type="submit" id="searchSubmit" placeholder="Rechercher" />
+							<input type="submit" id="searchSubmit" />
 							<i class="fa-solid fa-magnifying-glass"></i>
 						</div>
 					</form>
@@ -57,48 +57,50 @@
 			<section class="bgColor">
 				<div id="zf" class="container">
 					<!-- Section informations pokemon Zf -->
-					<div class="PokemonInfos">
+					<div id="PokemonZf">
 						<!-- Name pokemon -->
-						<h2 class="PokemonName"></h2>
-						<span class="IdPokemon"></span>
-
-						<nav class="sectionCardNav">
+						<div class="headerCard">
+							<h2 id="PokemonName"></h2>
+							<span id="IdPokemon"></span>
+						</div>
+						
+						<div class="navCard">
 							<div>
 								<button id="about" class="subText redText">À propos</button>
 							</div>
 							<!-- Add pokemon team -->
 							<div>
-								<button class="cta secondaryButton" id="addPokemonTeam">
+								<button class="cta secondaryButton" id="addPokemon">
 									Ajouter
 									<i class="fa-solid fa-plus"></i>
 								</button>
-								<button id="watchPokemon" class="cta primaryButton">
+								<button id="viewPokemon" class="cta primaryButton">
 									Voir
 									<i class="fa-solid fa-chevron-right"></i>
 								</button>
 							</div>
-						</nav>
-						<div class="sectionInformations">
-							<div class="sectionType">
+						</div>
+						<div class="infos">
+							<div class="sections">
 								<span class="secondaryText subText">Type</span>
 								<!-- Type pokemon -->
 								<div id="typesPokemons"></div>
 							</div>
 							<!-- Skills pokemon -->
-							<div class="sectionTalent">
+							<div class="sections">
 								<span class="secondaryText subText">Talent</span>
-								<span class="talentPokemon subText"></span>
+								<span id="talent" class="subText"></span>
 							</div>
 							<!-- Generation pokemon -->
-							<div class="sectionGen">
+							<div class="sections">
 								<span class="secondaryText subText">Région</span>
-								<span class="location subText"></span>
+								<span id="generation" class="subText"></span>
 							</div>
 						</div>
 						<!-- Description pokemon -->
-						<div class="sectionDescription">
+						<div class="sections">
 							<span class="secondaryText subText">Description</span>
-							<span class="description"></span>
+							<span id="description"></span>
 						</div>
 						<!-- Stats pokemon -->
 						<div class="sectionsStatistiques">
