--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -60,7 +60,6 @@
 						<nav class="sectionCardNav">
 							<div>
 								<button id="about" class="subText redText">À propos</button>
-								<button id="evolution" class="subText">Évolution</button>
 							</div>
 							<!-- Add pokemon team -->
 							<div>
@@ -68,10 +67,10 @@
 									Supprimer
 									<i class="fa-solid fa-plus"></i>
 								</button>
-								<button id="watchPokemon" class="cta primaryButton">
+								<a href="#" id="watchPokemon" class="cta primaryButton">
 									Voir
 									<i class="fa-solid fa-chevron-right"></i>
-								</button>
+								</a>
 							</div>
 						</nav>
 						<div class="sectionInformations">
