--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 									Ajouter
 									<i class="fa-solid fa-plus"></i>
 								</button>
-								<button id="watchPokemon" class="cta primaryButton">
+								<a href="#" id="watchPokemon" class="cta primaryButton">
 									Voir
 									<i class="fa-solid fa-chevron-right"></i>
-								</button>
+								</a>
 							</div>
 						</nav>
 						<div class="sectionInformations">
