--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 		<link rel="icon" type="image/png" sizes="76x76" href="./IMG/Logo-Pokemon-128.png" />
 
-		<link rel="stylesheet" href="./CSS/variables.css" />
-		<link rel="stylesheet" href="./CSS/style.css" />
+		<link rel="stylesheet" href="../CSS/variables.css" />
+		<link rel="stylesheet" href="../CSS/style.css" />
 		<link id="mode" rel="stylesheet" href="../CSS/dark-mode.css" />
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
