--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<header class="container">
 			<div id="headerPage">
 				<!-- Logo -->
-				<a href="./index.html">
+				<a href="#">
 					<img src="./IMG/Logo-Pokemon-128.png" alt="Logo RocketDev" />
 				</a>
 
