--- a/HTML_PAGES/pokemon.html
+++ b/HTML_PAGES/pokemon.html
@@ -34,7 +34,7 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode">
-						<i class="fa-solid fa-moon"></i>
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" alt="Icon Dark Light Mode" />
 					</button>
 					<form id="searchPokemon">
 						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
@@ -98,9 +98,8 @@
 							</div>
 							<!-- Stats pokemon -->
 							<div class="sectionsStatistiques">
-								<div class="statistiques zones">
-									<span class="secondaryText subText">Statistiques</span>
-								</div>
+								<span class="secondaryText subText">Statistiques</span>
+								<div class="statistiques zones"></div>
 							</div>
 						</div>
 						<div id="evolution" class="hidden">
