--- a/HTML_PAGES/rgpd.html
+++ b/HTML_PAGES/rgpd.html
@@ -34,7 +34,7 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode">
-						<i class="fa-solid fa-moon"></i>
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" alt="Icon Dark Light Mode">
 					</button>
 					<form id="searchPokemon">
 						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
