--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode">
-						<i class="fa-solid fa-moon"></i>
+						<img src="./IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" alt="Icon Dark Light Mode">
 					</button>
 					<form id="searchPokemon">
 						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
@@ -102,8 +102,8 @@
 						</div>
 						<!-- Stats pokemon -->
 						<div class="sectionsStatistiques">
+							<span class="secondaryText subText">Statistiques</span>
 							<div class="statistiques zones">
-								<span class="secondaryText subText">Statistiques</span>
 							</div>
 						</div>
 					</div>
