--- a/HTML_PAGES/pokedex-pokemon-list.html
+++ b/HTML_PAGES/pokedex-pokemon-list.html
@@ -23,6 +23,12 @@
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;900&display=swap" rel="stylesheet" />
 	</head>
 	<body>
+		<!-- Animation on Load -->
+		<div class="loaderWrapper">
+			<div class="loaderSection sectionLeft"></div>
+			<div class="loaderSection sectionRight"></div>
+		</div>
+
 		<!-- Header page -->
 		<header class="container">
 			<div id="headerPage">
@@ -34,7 +40,7 @@
 				<!-- Navigation and Search -->
 				<div class="spaceGap">
 					<button id="darkLightMode">
-						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" alt="Icon Dark Light Mode">
+						<img src="../IMG/POKEMON__ICONS/Icon-Moon.png" loading="lazy" alt="Icon Dark Light Mode" />
 					</button>
 					<form id="searchPokemon">
 						<input id="search" type="search" id="searchInput" required placeholder="Recherche" />
@@ -83,7 +89,6 @@
 									<option value="original-poni">Alola (Poni)</option>
 									<option value="updated-alola">Alola (Update)</option>
 								</select>
-
 
 								<button id="typeSelecting" class="cta secondaryButton">
 									Trier par type
