--- a/HTML_PAGES/team-pokemon.html
+++ b/HTML_PAGES/team-pokemon.html
@@ -23,6 +23,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;900&display=swap" rel="stylesheet" />
 	</head>
 	<body>
+		<!-- Animation on Load -->
+		<div class="loaderWrapper">
+			<div class="loaderSection sectionLeft"></div>
+			<div class="loaderSection sectionRight"></div>
+		</div>
 		<!-- Header page -->
 		<header class="container">
 			<div id="headerPage">
