--- a/HTML_PAGES/error-page.html
+++ b/HTML_PAGES/error-page.html
@@ -25,6 +25,7 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
+			<img class="loader" src="../IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" loading="lazy">
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
@@ -61,6 +62,10 @@
 		<main>
 			<section class="bgColor">
 				<div id="zf" class="container">
+					<div id="alertMessage" class="containerColor">
+						<i id="styleIconAlert" class="fa-solid fa-plus redText"></i>
+						<span id="alertMessageText"></span>
+					</div>
 					<!-- Section informations pokemon Zf -->
 					<div>
 						<!-- Name pokemon -->
@@ -83,7 +88,7 @@
 					<div>
 						<h2>Une aventure inoubliable</h2>
 						<p>
-							Le Pokédex de La Rocket Dev, l’outil idéal pour tout dresseur en formation ! Explorez, découvrez et apprenez tout sur vos Pokémon préférés, de Bulbizarre à Dracaufeu en
+							Le Pokédex de Rocket Dev, l’outil idéal pour tout dresseur en formation ! Explorez, découvrez et apprenez tout sur vos Pokémon préférés, de Bulbizarre à Dracaufeu en
 							passant par Pikachu !
 						</p>
 					</div>
@@ -99,7 +104,7 @@
 					</ul>
 				</div>
 				<div class="secondaryContent">
-					<span>©2025 - Rocket Dev</span>
+					<span>© 2025 - Rocket Dev</span>
 					<div>
 						<span>Langue - fr</span>
 						<span>Cookies</span>
