--- a/HTML_PAGES/pokedex-pokemon-list.html
+++ b/HTML_PAGES/pokedex-pokemon-list.html
@@ -25,6 +25,7 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
+			<img class="loader" src="../IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" loading="lazy" />
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
@@ -62,16 +63,20 @@
 			<!-- Pokemon on the bill -->
 			<section id="pokemonPromoted">
 				<div class="container">
+					<div id="alertMessage" class="containerColor">
+						<i id="styleIconAlert" class="fa-solid fa-plus redText"></i>
+						<span id="alertMessageText"></span>
+					</div>
 					<header>
 						<h1>Pokédex Pokemon</h1>
 						<p>Retrouvez tout vos Pokémons préférés !</p>
 
 						<div>
-							<span class="redText subText">Pokédex</span>
+							<span class="subText redText" id="placeText">Voici les Pokémons de : Kanto</span>
 							<div class="spaceGap">
 								<!-- Select pokemons -->
 								<select name="GenSelecting" id="GenSelecting" class="cta secondaryButton">
-									<option value="">Trier par région</option>
+									<option value="kanto">Trier par région</option>
 									<option value="national">National</option>
 
 									<option value="kanto">Kanto</option>
@@ -90,10 +95,27 @@
 									<option value="updated-alola">Alola (Update)</option>
 								</select>
 
-								<button id="typeSelecting" class="cta secondaryButton">
-									Trier par type
-									<i class="fa-solid fa-chevron-right"></i>
-								</button>
+								<select name="TypeSelecting" id="TypeSelecting" class="cta secondaryButton">
+									<option value="1">Trier par Type</option>
+									<option value="1">Normal</option>
+									<option value="2">Combat</option>
+									<option value="3">Vol</option>
+									<option value="4">Poison</option>
+									<option value="5">Sol</option>
+									<option value="6">Roche</option>
+									<option value="7">Insecte</option>
+									<option value="8">Spectre</option>
+									<option value="9">Acier</option>
+									<option value="10">Feu</option>
+									<option value="11">Eau</option>
+									<option value="12">Plante</option>
+									<option value="13">Electric</option>
+									<option value="14">Psy</option>
+									<option value="15">Glace</option>
+									<option value="16">Dragon</option>
+									<option value="17">Ténèbre</option>
+									<option value="18">Fée</option>
+								</select>
 							</div>
 						</div>
 					</header>
@@ -111,7 +133,7 @@
 					<div>
 						<h2>Une aventure inoubliable</h2>
 						<p>
-							Le Pokédex de La Rocket Dev, l’outil idéal pour tout dresseur en formation ! Explorez, découvrez et apprenez tout sur vos Pokémon préférés, de Bulbizarre à Dracaufeu en
+							Le Pokédex de Rocket Dev, l’outil idéal pour tout dresseur en formation ! Explorez, découvrez et apprenez tout sur vos Pokémon préférés, de Bulbizarre à Dracaufeu en
 							passant par Pikachu !
 						</p>
 					</div>
@@ -127,7 +149,7 @@
 					</ul>
 				</div>
 				<div class="secondaryContent">
-					<span>©2025 - Rocket Dev</span>
+					<span>© 2025 - Rocket Dev</span>
 					<div>
 						<span>Langue - fr</span>
 						<span>Cookies</span>
