--- a/HTML_PAGES/error-page.html
+++ b/HTML_PAGES/error-page.html
@@ -25,7 +25,7 @@
 	<body>
 		<!-- Animation on Load -->
 		<div class="loaderWrapper">
-			<img class="loader" src="../IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" loading="lazy">
+			<img class="loader" src="../IMG/Pokeball-Image-Color.png" alt="Pokeball animation chargement de page" loading="lazy" />
 			<div class="loaderSection sectionLeft"></div>
 			<div class="loaderSection sectionRight"></div>
 		</div>
