--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 					</div>
 					<ul>
 						<li class="secondaryText">Navigation</li>
-						<li><a href="./HTML_PAGES/pokemon.html">Accueil</a></li>
+						<li><a href="./index.html">Accueil</a></li>
 						<li><a href="./HTML_PAGES/pokedex-pokemon-list.html">Pokédex</a></li>
 					</ul>
 					<ul>
